cert-manager/private/ingress-drupal-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
# release
  name:   
# release 
  namespace:  
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  tls:
  - hosts:
#subdominio
    - 
#secret-release
    secretName: 
  rules:
#subdominio
  - host: 
    http:
      paths:
      - path: /
        backend:
#release
          serviceName: 
          servicePort: 80
